OUT-809 Scrolling issue for mobile view (#321)
* fix: scrollbar issue on dev tools

* chore: adds css variable for offset

* chore: adds media query

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+:root {
+  --top-offset: 235px;
+}
+
+@media (min-width: 735px) {
+  :root {
+    --top-offset: 195px;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
